assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Oswald|Lato:300');
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');


:root {
    --dark-sailor-blue: #0e3a53;
    --sailor-blue: #203344;
    --blue: #2e4a62;
    --light-blue: #6993b8;
    --baby-blue: #9bb7d0;
    --white: #FFFFFF;
}

/* override bootstrap styling for background and font and make page stretch at least 100vh to avoid whitespace below footer, 
code taken from https://forum.freecodecamp.org/t/footer-white-space-below/191360/4 */
body {
    background-color: var(--dark-sailor-blue);
    font-family: 'Oswald', sans-serif;
    display: flex;
    flex-direction: column;
    min-height: 20vh;
    margin: 0;
    
}

p {
    color: var(--white);
    font-family: 'Monserrat', sans-serif;
    margin-top: 0;
    margin-bottom: 1rem;
    margin-block-start: 1em;
    overflow: 0;

} 
*, ::after, ::before {
    box-sizing: border-box;
}

main {
    flex: 1 0 auto;
}
main header{
    flex: 1 0 auto;
    color: var(--white);
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Oswald', sans-serif;
    color: var(--white);
}

/* header */

.my-nav {
    background-color: var(--dark-sailor-blue);
}

/* keep links to right */
.my-colapse{
    flex-grow: 0;
}

.navbar .my-logo {
    font-family: 'Oswald', sans-serif ;
    color: var(--baby-blue);
}

.navbar .nav-pills .my-link {
    color: var(--baby-blue);
    text-decoration: none;
}

.navbar .nav-pills .my-link.active {
    background-color: var(--baby-blue);
    color: var(--dark-sailor-blue);
}

.navbar .nav-pills .my-link:hover :not(.active){
    color: var(--light-blue);
}

/* main*/

main h1 {
    text-transform: uppercase;
    font-weight: bolder;
    text-decoration-color: var(--white);
}
/* main*/

main h1 {
    text-transform: uppercase;
    font-weight: bolder;
    color: var(--white);
}

/* commissions */

/* shape image into a circle and layer it on top of container */
.circle img {
    width: 100%;
    border-radius: 50%;
    z-index: 5;    
}

.pricing h2 {
    text-align: right;
    padding-right: 1vw;
} 

/* pricing */

/* shape images container into a circle */
.circle {
    border: 1px solid var(--light-blue);
    border-radius: 50%;
    z-index: 2;
    background-color: var(--light-blue);
}

/* shape image into a circle and layer it on top of container */
.circle img {
    width: 100%;
    border-radius: 50%;
    z-index: 3;    
}

/* make background below text sink behind image and image container and position so that edges are 
never visible for commissions section */
.commissions p {
    background-color: var(--blue);
    color: var(--white);
    padding: 5% 5% 5% 50%;
    margin-left: -35%;
    z-index: -1;
}

/* make background below text behind image and image container and position so that edges are 
never visible for pricing section */
.pricing p {
    background-color: var(--blue);
    color: var(--white);
    padding: 5% 40% 5% 5%;
    margin-right: -35%;
    z-index: -1;
}
.iframe{
    border-width: 0px;
}
#vimeo-container {
    padding:56.25% 0 0 0;
    position:relative;
} 

/* Footer */

footer{
    height: 25px;
}

.social-networks{
    text-align: center;

}

.social-networks li{
    display: inline;
}

.social-networks i{
    font-size: 160%;
    margin: 1%;
    padding: 2%;
    color: var(--white);
}
.copyright {
    text-align: center;
    color: var(--baby-blue);
    font-family: 'oswald', sans-serif;
}

/* about */

/* make images responsive without distorting */
.my-img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.reviews {
    background-color: var(--baby-blue);
    color: var(--dark-sailor-blue);
}

.reviews p {
    text-align: center;
    font-style: italic;
    font-weight: bolder;
    color: var(--dark-sailor-blue);
}

.reviews h2 {
    text-align: center;
    text-transform: uppercase;
    font-weight: bolder;
    color: var(--dark-sailor-blue);
}

/* make image sticky on top, but below h2 by calculating offset based on h2 element height (2xpadding + font-size) */
.my-sticky-top{
    position: relative;
    position: sticky;
    position: -webkit-sticky;
    top: calc(2rem + (1.325rem + .9vw));
}

/* calculate image size to fill the vh reduced by h2 size */
.my-img-menu{
    width: 100%;
    height: calc(100vh - (2rem + (1.325rem + .9vw)));
    object-fit: cover;
}

/* gallery */

.my-img-container {
    height: 33vh;
    overflow: hidden;
}

/* give embeded video max dimensions and center horizontaly on page */
.my-video-container { 
    max-width: 800px;
    max-height: 450px;
    margin: 0 auto;
}

.my-video {
    max-width: 800px;
    max-height: 450px;
}

/* contact */

.my-btn {
    background-color: var(--dark-sailor-blue);
    color: var(--baby-blue);
    border: 1px solid var(--dark-sailor-blue)
}

.my-btn:hover {
    background-color: var(--light-blue);
    color: var(--baby-blue);
    border: 1px solid var(--light-blue)
}

.my-link-cont {
    color: var(--dark-sailor-blue);
    text-decoration: none;
}

.my-link-cont:hover {
    color: var(--sailor-blue-);
    text-decoration: none;
}

.form-label {
    color: var(--baby-blue);

}

/* 404 page*/

#error-img-cont {
    max-width: 500px;
}

.home-btn {
    background-color: var(--dark-sailor-blue);
    color: var(--baby-blue);
    text-decoration: none;
    display: block;
    border-radius: 0.25rem;
}

.home-btn:hover {
    color: var(--light-blue);
}

@media (max-width: 768px) {
    /* make carousel height bigger on smaller screen sizes */
    .carousel-item img {
        height: 70vh;
        width: 100%;
        object-fit: cover;
      }


}

/* align heading to the right */
.pricing h2 {
    text-align: right;
}

/* hide overflow caused by margins to avoid horizontal scrolling */
.commissions, .pricing {
    overflow: hidden;
}
@media (max-width: 576px) {
    /* make divs on info box stretch full width to avoid overflow on smaller screen sizes */
    .find-us div {
        width: 100%;
    }
}

@media (max-width: 330px) {
    /* remove right margin to avoid moving of hamburger menu to second row of navbar */
    .navbar-brand {
        margin-right: 0 auto;
    }
}

